# chara-convert

./: .dockerignore  README.md
.github/workflows/: api-ci.yml  pages-attach-domain.yml  web-ci.yml  workers-ci.yml
apps/api/: .dockerignore  Dockerfile  fly.toml  main.py  pyproject.toml
apps/api/routes/: __init__.py  ai_enrich.py  convert.py  parse.py  platforms.py
apps/api/tests/: conftest.py  test_ai_enrich.py  test_ai_enrich_lifecycle.py  test_convert.py  test_parse.py  test_platforms.py
apps/api/tests/fixtures/: cai_sample.txt  sillytavern_sample.json
apps/web/: .gitignore  astro.config.mjs  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
chara-convert/: .gitignore  AGENTS.md  README.md  pyproject.toml
chara-convert/chara_convert/: __init__.py  cli.py  converter.py  diff.py  normalizer.py  parser.py  registry.py  webui.py
chara-convert/chara_convert/ai/: __init__.py  enrich.py
chara-convert/chara_convert/exporters/: __init__.py  json.py  markdown.py
chara-convert/chara_convert/llm/: __init__.py  anthropic.py  base.py  credit_client.py  deepseek.py  factory.py  mock.py  openrouter.py  pricing.py  router.py
chara-convert/chara_convert/prompts/: __init__.py  cai_resplit_definition.md  generate_example_dialogue.md  generate_scenario_intro.md  polybuzz_expand_bio.md
chara-convert/chara_convert/sources/: __init__.py  auto.py  base.py  cai.py  chai.py  polybuzz.py
chara-convert/chara_convert/specs/: agnai.toml  backyardai.toml  fictionlab.toml  janitorai.toml  nomi.toml  novelai.toml  risuai.toml  saucepan.toml  sillytavern_v2.toml
chara-convert/docs/: conversion-landscape.md  converter-links.md  design-analysis.md
chara-convert/tests/: test_ai_enrich.py  test_cli.py  test_converter.py  test_converter_layered.py  test_diff.py  test_diff_layered.py  test_exporter_layered.py  test_llm_anthropic.py  test_llm_deepseek.py  test_llm_factory.py  test_llm_mock.py  test_parser.py  test_parser_novelai.py  test_sources_auto.py  test_sources_cai.py  test_sources_cai_ai_resplit.py  test_sources_cai_definition_split.py  test_sources_chai.py  test_sources_chai_prompt_split.py  test_sources_polybuzz.py  test_sources_polybuzz_ai_bio.py  test_spec_layered_fictionlab.py  test_spec_nontraditional.py  test_webui.py  test_webui_deprecation.py
chara-convert/tests/fixtures/: _e2e_minimal.json  _e2e_out.md  sample_card.json
chara-convert/tests/llm/: test_credit_client.py  test_factory_openrouter.py  test_openrouter.py  test_openrouter_live.py  test_pricing.py  test_router.py
chara-convert/worker/: .dev.vars.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
chara-convert/worker/src/: index.ts  llm-proxy.ts
chara-convert/worker/tests/: proxy.test.ts
collab/handoffs/: 2026-05-29-or-credit-router-phase-A-done.md  2026-05-29-or-credit-router-pickup.md  2026-05-30-or-credit-router-deploy-gated.md
collab/reviews/: A1-T19-adversarial.md
docs/deploy/: README.md
docs/plans/: 2026-05-29-or-credit-router-index.md  2026-05-29-or-credit-router-plan-A-worker.md  (+2 more)
scripts/: pricing_drift_check.py  smoke.sh
(+77 files in other folders)
