[project]
name = "chara-convert"
version = "0.1.0"
description = "AI Character Card Conversion Workbench — convert and edit character cards across platforms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Cybernium" }]

dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",  # OR client uses OpenAI-compatible SDK
    "httpx>=0.27.0",  # credit_client + OR async streaming
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ccv = "chara_convert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chara_convert"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = ["live_smoke: hits live OR API; gated by RUN_OR_SMOKE=1"]
